[package]
name = "ratatui-tree-widget"
description = "tui-tree-widget adapted for ratatui"
version = "0.12.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/tui-rs-tree-widget"
authors = ["Johan Venter <a.johan.venter@gmail.com>"]
edition = "2021"
rust-version = "1.60.0"
keywords = ["ratatui", "terminal", "tree", "widget"]
categories = ["command-line-interface"]
include = ["src/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.21.0"}
unicode-width = "0.1"

[dev-dependencies]
crossterm = "0.25"
ratatui = "0.21"
